# Wordle5

./: CMakeLists.txt  README.md  utkarsh_gupta.py  wordle5.cpp
